[package]
name = "roguelike"
version = "0.1.0"
authors = ["Trey McNeil <Tamcneil97@gmail.com>"]
edition = "2018"

[dependencies]
#More features: "collisions", "complexe_shapes", "immi_ui", "sounds", "gamepads"
quicksilver = { version = "0.3.7", default-features = false, features = ["fonts", "saving"]}
